More mobile-friendliness, fixed table header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,12 @@ footer {
   }
 }
 
-
+@media (max-width: 507px) {
+	#intro .container {
+		width: 100vw;
+		padding: 0;
+	}
+}
 
 /*---------------------------------------
    Overview  section
@@ -635,6 +640,18 @@ footer {
   border-radius: 50%;
 }
 
+#program tr th:first-child, #program tr td:first-child {
+	width: 25%;
+}
+
+#program tr th:nth-child(2), #program tr td:nth-child(2) {
+	width: 55%;
+}
+
+#program tr th:last-child, #program tr td:last-child {
+	width: 20%;
+}
+
 .nav-tabs {
   margin-bottom: 20px;
 }
@@ -746,7 +763,43 @@ footer {
   margin-top: 18px;
 }
 
+#sponsors .container {
+	width: 80%;
+}
 
+@media (max-width: 991px) {
+	.bronze {
+		margin-left: -60px;
+		max-width:
+	}
+}
+
+@media (max-width: 850px) {
+	.bronze {
+		margin-left: -80px;
+	}
+	.mastercard {
+		margin-left: -30px;
+	}
+	.up {
+		margin-left: -20px;
+	}
+}
+
+@media (max-width: 768px) {
+	.bronze {
+		margin-left: 0;
+	}
+	.mastercard {
+		margin-left: 16.66666667%;
+	}
+	.up {
+		margin-left: 33.33333333%;
+	}
+	.jet {
+		clear: both;
+	}
+}
 
 /*---------------------------------------
    Contact section
